Incorrect render with Cycles (CPU) using texture #48657

Closed
opened 2016-06-15 18:56:01 +02:00 by Jefferson Rausseo · 5 comments

System Information
GNU/Linux Manjaro 64bits
Nvidia 8600 GT

Blender Version
Broken: 2.77 3c64696
Worked: 2.77 Official Build

Short description of error
Incorrect render with Cycles (CPU).

image_problem.png

Exact steps for others to reproduce the error
In file attached, press "Render".

problem.blend

**System Information** GNU/Linux Manjaro 64bits Nvidia 8600 GT **Blender Version** Broken: 2.77 3c64696 Worked: 2.77 Official Build **Short description of error** Incorrect render with Cycles (CPU). ![image_problem.png](https://archive.blender.org/developer/F317243/image_problem.png) **Exact steps for others to reproduce the error** In file attached, press "Render". [problem.blend](https://archive.blender.org/developer/F317246/problem.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @jefrau

Added subscriber: @jefrau

This issue was referenced by blender/cycles@06a431e68d

This issue was referenced by blender/cycles@06a431e68db8f30a35f2966895979fb1f77c04d5

This issue was referenced by f0c7a2a25c

This issue was referenced by f0c7a2a25cfc905fa00e5551f6bd614159de589f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48657
No description provided.