Fix T48657: Incorrect render with Cycles (CPU) using texture

The sockets of the RGB to BW node were set to the wrong type after the recent node refactor.